src/objects/CHN_Qualification__e.object
<CustomObject>
    <fields>
        <fullName>CHN_Referral_Identifier__c</fullName>
        <label>EFS Referral Identifier</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complex_Indicator__c</fullName>
        <label>Complex Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EID__c</fullName>
        <label>EID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Created_Date__c</fullName>
        <label>Referral Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_End_Date__c</fullName>
        <label>Referral End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Modified_Date__c</fullName>
        <label>Referral Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Service_Type__c</fullName>
        <label>Referral Service Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Service_Value__c</fullName>
        <label>Referral Service Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Status__c</fullName>
        <label>Referral Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_Source_Name__c</fullName>
        <label>Referred Source Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Description__c</fullName>
        <label>Score Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Type__c</fullName>
        <label>Score Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Value__c</fullName>
        <label>Score Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Member_ID__c</fullName>
        <label>Subscriber Member ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CHN Qualification</label>
    <pluralLabel>CHN Qualifications</pluralLabel>
</CustomObject>